--- a/TODO
+++ b/TODO
@@ -11,3 +11,6 @@ Sugestão: Adicionar shell script que adiciona o include.
 3. Criar uma função para imprimir uma árvore
 Desc: Para realizar testes mais avançados iremos precisar de uma forma mais fácil e precisa de testar por isso é preciso imprimir as árvores geradas. 
 
+
+4. Resolver o problema do IF e WHILE com Bloco
+Desc: Não estudei o problema ainda.
