--- a/TODO
+++ b/TODO
@@ -11,3 +11,31 @@ Sugest: Talvez seja possível só pesquisar pelo id primeiro na tabela de símbo
 
 
 5. (Opcional) Refatorar o .y para que as funções no final do arquivo fiquem em um arquivo separado para melhor organização
+
+
+•Em expressões binárias aritméticas ou relacionais quando um dos operandos for
+do tipo int e o outro for do tipo double o operando do tipo int deve ser convertido
+a double.
+
+•Quando uma variável declarada como double receber o valor de uma expressão
+de tipo int, o resultado da expressão deve ser convertido para o tipo double. Isso
+é válido para comandos de atribuição, passagem de parâmetros em chamadas de
+funções e para o retorno de funções.
+
+•Quando uma variável declarada como int receber o valor de uma expressão de tipo
+double, o resultado da expressão deve ser convertido para o tipo int, nesse caso
+deve ser emitida uma mensagem de advertência. Isso é válido para comandos de
+atribuição, passagem de parâmetros em chamadas de funções e para o retorno de
+funções.
+
+•O tipo string pode ocorrer apenas em expressões relacionais, os dois operandos
+devem ser do mesmo tipo, caso contrário uma mensagem de erro deve ser emitida.
+
+•Expressões com tipos incompatíveis devem emitir mensagens de erro.
+
+•Chamadas de funções com número de parâmetros errados ou com parâmetros
+formais e reais com tipos conflitantes devem ocasionar a emissão de mensagens
+de erro.
+
+•Atribuição de variáveis ou retorno de funções com tipos conflitantes devem
+ocasionar a emissão de mensagens de erro.
